--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
             font-size: 16px;
             cursor: pointer;
         }
+        /* Stil săgeată fixă */
         #arrow {
             position: absolute;
-            width: 0; 
-            height: 0; 
+            width: 0;
+            height: 0;
             border-left: 15px solid transparent;
             border-right: 15px solid transparent;
             border-bottom: 20px solid red;
-            top: -30px;
+            top: -40px;
             left: 50%;
             transform: translateX(-50%);
         }
