--- a/index.html
+++ b/index.html
@@ -21,22 +21,20 @@
             font-size: 16px;
             cursor: pointer;
         }
-        /* Stil pentru săgeata fixă */
         #arrow {
             position: absolute;
             width: 0;
             height: 0;
-            border-top: 20px solid transparent;
-            border-bottom: 20px solid transparent;
-            border-left: 30px solid red;
-            top: 50%;
-            left: 320px; /* Mutăm săgeata în dreapta roții */
-            transform: translateY(-50%);
-            z-index: 10;
+            border-left: 15px solid transparent;
+            border-right: 15px solid transparent;
+            border-bottom: 20px solid red;
+            top: -40px;
+            left: 50%;
+            transform: translateX(-50%);
         }
         #container {
             position: relative;
-            width: 400px; /* Extindem containerul pentru a include săgeata */
+            width: 300px;
             margin: 0 auto;
         }
     </style>
@@ -46,7 +44,7 @@
         <div id="wheel">
             <canvas id="canvas" width="300" height="300"></canvas>
         </div>
-        <div id="arrow"></div> <!-- Săgeata fixă în dreapta -->
+        <div id="arrow"></div> <!-- Săgeata fixă -->
     </div>
     <button id="spinButton">Spin the Wheel!</button>
 
